# alphacam-patch-matcher

./: README.md  gitignore  pyproject.toml
.github/workflows/: tests.yml
config/: butterflies.toml
examples/: demo_search_and_replace.py
patchmatcher/: __init__.py  __main__.py  api.py  butterflies.py  geometry.py  io.py  matching.py  svg.py  tables.py
tests/: conftest.py  test_api.py  test_butterflies.py  test_cli.py  test_cli_json_dxf.py  test_cli_serve.py  test_cli_svg.py  test_cli_svg_regression.py  test_geometry.py  test_matching.py  test_tables.py
