[project]
name = "patchmatcher"
version = "1.0.0"
description = "Modern Python re-implementation of the Alphacam Patch-Matcher plugin."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Giorgio" }
]

dependencies = []

[project.urls]
Homepage = "https://github.com/<your-username>/<your-repo>"
Source = "https://github.com/<your-username>/<your-repo>"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
addopts = "-ra"
