[project]
name = "patchmatcher"
version = "1.0.0"
description = "Modern Python re-implementation of the Alphacam Patch-Matcher plugin."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Giorgio" }
]
license = { file = "LICENSE" }

dependencies = []

[project.urls]
Homepage = "https://github.com/JaskRendix/alphacam-patch-matcher"
Source = "https://github.com/JaskRendix/alphacam-patch-matcher"

[project.scripts]
patchmatcher = "patchmatcher.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["patchmatcher"]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
addopts = "-ra"
